# llm-gateway-eval

./: .gitignore  README.md  README_CN.md  pyproject.toml
configs/: eval.example.yaml  eval.gateway-core.yaml
data/cases/: dynamic_only.jsonl  gateway_core.jsonl  smoke.jsonl
data/codex_tasks/invoice_totals/: TASK.md
data/codex_tasks/jsonl_events/: TASK.md
data/codex_tasks/markdown_toc/: TASK.md
data/pricing/: official_prices.example.csv
docs/: agent-compare.md  codex-compare.md  evaluation-methodology.md  hero.html  report-audit.html  report-scores.html
llm-gateway-eval-report/: SKILL.md
llm-gateway-eval-report/agents/: openai.yaml
llm-gateway-eval-report/references/: report-schema.md
llm-gateway-eval-report/scripts/: render_gateway_eval_report.py
src/llm_gateway_eval/: __init__.py  agent_compare.py  agent_report.py  assertions.py  audit.py  benchmarks.py  billing.py  cases.py  cli.py  client.py  codex_compare.py  codex_report.py  config.py  honeytokens.py  metrics.py  models.py  pricing.py  redaction.py  report.py  routing.py  runner.py  security.py  web_app.py  web_server.py  weytoken_pricing.py
templates/: agent_compare_report.md.j2  codex_compare_report.md.j2  report.md.j2
tests/: test_agent_compare.py  test_assertions.py  test_audit.py  test_benchmarks.py  test_billing.py  test_codex_compare.py  test_config.py  test_gateway_quick_eval.py  test_honeytokens.py  test_integration_smoke.py  test_metrics.py  test_pricing.py  test_redaction.py  test_report.py  test_routing.py  test_web_app.py  test_web_server.py  test_weytoken_pricing.py
(+32 files in other folders)
