[project]
name = "llm-gateway-eval"
version = "0.1.0"
description = "OpenAI-compatible LLM gateway evaluation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.22.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
]

[project.scripts]
llm-gateway-eval = "llm_gateway_eval.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

